# ofi-synthesiser

./: .dockerignore  .gitignore  Containerfile  Makefile  README.md  docker-compose.yml  docker.nix  flake.nix  jupyter_notebook_config.json  pyproject.toml  requirements.txt  shell.nix  test.nix
ofisynthesiser/data/: __init__.py  preprocess_data.py
ofisynthesiser/executors/: analyse.py  experiment.py  run.py
ofisynthesiser/models/classification/: __init__.py  catboost.py  extratrees.py  knn.py  lightgbm.py  logit.py  randomforest.py  svm.py  xgboost.py
ofisynthesiser/models/synthesising/: __init__.py  copulagan.py  ctgan.py  tvae.py
ofisynthesiser/utils/: __init__.py  logging.py  seed.py  tqdm_joblib.py
report/: Makefile  main.bib  main.tex  presentation.tex  vancouver.tex
report/figures/: flowchart  flowchart.py  format_tableone.py  model.py  model_flowchart  predictor_table.py  results.py  table1.py
report/templates/: Gantt tidsschema T8 vt22.xlsx  powerpoint_template.ppt  template_abstract.doc  template_thesis.docx  template_thesis.odt  template_thesis.ott  title_page_eng.doc  title_page_swe.docx
